# OmniScreen-AI

./: .gitignore  LICENSE  OminiScreen_AI.md  OmniScreen_AI.ipynb  README.md  pyproject.toml  requirements.txt
.cursor/: colab_sync.py  mcp.json
.cursor/rules/: omniscreen-colab-sync.mdc
data/raw_libraries/: CD274_mRNA.fasta  README.md  cd274_target_metadata.json  initial_compounds_reallib.smi  nanobody_cdr_regions.json  pd_l1_nanobody_seed.fasta
data/raw_libraries/reference/: sirna_queries.fa
data/receptor/: README.md
data/screened_results/: README.md  af3_na_metrics.csv  af3_pe_metrics.csv  chemical_space_props.csv  docking_scores.csv  md_rmsd.csv  md_rmsd_timeseries.csv  mmpbsa_frame_energies.csv  mmpbsa_residue_decomposition.csv  mmpbsa_results.csv  mutation_scores.csv  offtarget_filtered.csv  ppi_docking_scores.csv  ppi_energy_decomposition.csv  ppi_mmgbsa_meta.json  ppi_mmgbsa_summary.csv  sirna_candidates.csv  sirna_offtarget.sam  thermodynamics.csv  top10_ligands.sdf
data/screened_results/af3_na_complexes/: CD274_211_231_best.cif
data/screened_results/af3_pe_complexes/: CDR3_P98KI_best.cif  CDR3_P98KL_best.cif  CDR3_P98KP_best.cif
data/screened_results/af3_server/: README.md
docker/: Dockerfile
docs/workflows/: NA_MODULES.md  PE_MODULES.md  SM_MODULES.md
notebooks/: OmniScreen_NA_Workflow.ipynb  OmniScreen_PE_Workflow.ipynb  OmniScreen_SM_Workflow.ipynb
scripts/: pe_module5_mmgbsa.py  regenerate_all_figures.py  render_af3_complex_png.py  render_fig8a_duplex.py  render_sm_binding_pose_png.py  sm_module4_md.py  sm_module5_mmpbsa.py
(+215 files in other folders)
